updated s3